creating filter of cards

--- a/src/components/poster/poster.scss
+++ b/src/components/poster/poster.scss
@@ -2,19 +2,11 @@
     padding: 52px 0 200px 0;
     background: url('../../assets/desk.jpg') center center / cover no-repeat;
     max-height: 640px;
-    font-family: Merienda;
-}
-
-img {
-    display: block;
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 15px;
+    font-family: Merienda, cursive;
 }
 
 .info {
     margin-top: 20px;
-    font-style: normal;
     font-weight: 700;
     font-size: 24px;
     line-height: 35px;
