--- a/src/components/heading/heading.scss
+++ b/src/components/heading/heading.scss
@@ -1,11 +1,23 @@
-h1 {
-    margin-top: 111px;
+
+.heading {
     text-align: center;
     font-family: Merienda;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 40px;
-    line-height: 58px;
-    color: #FFFFFF;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: #000000;
+    &_main {
+        margin-top: 111px;
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 58px;
+        color: #FFFFFF;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+    &_big {
+        margin-top: 60px;
+        }
+    &_small {
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 35px;
+        color: #000000;
+    }
 }
