--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap');
 
-* {
+*, html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
