--- a/src/components/cardFilter/cardFilter.scss
+++ b/src/components/cardFilter/cardFilter.scss
@@ -41,6 +41,14 @@
         &:not(:first-child) {
             margin-left: 5px;
         }
+        &_active {  
+            background-color: #6f4e37;
+            color: white;
+        }
+
+        &:hover {
+            box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
+        }
     }
     &__card-wrapper {
         margin: 0 auto;
@@ -51,4 +59,5 @@
         justify-content: space-between;
         flex-wrap: wrap;
     }
+    
 }
