--- a/src/components/aboutBeans/aboutBeans.scss
+++ b/src/components/aboutBeans/aboutBeans.scss
@@ -1,18 +1,25 @@
 .aboutBeans {
-    padding: 70px 0 60px;
-    &__wrapper {
-        max-width: 700px;
-        margin: 0 auto;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+	padding: 70px 0 60px;
 
-    }
-    &__info {
-        margin-left: 80px;
-    }
-    &__descr {
-        text-align: center;
-        margin-top: 26px;
-    }
+	&__wrapper {
+		max-width: 700px;
+		margin: 0 auto;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+
+	}
+
+	&__info {
+		margin-left: 80px;
+	}
+
+	&__descr {
+		text-align: center;
+		margin-top: 26px;
+	}
+
+	&__img {
+		filter: drop-shadow(5px 5px 30px rgba(0, 0, 0, 0.25));
+	}
 }
