--- a/src/components/aboutBeans/aboutBeans.scss
+++ b/src/components/aboutBeans/aboutBeans.scss
@@ -17,6 +17,9 @@
 	&__descr {
 		text-align: center;
 		margin-top: 26px;
+		font-size: 14px;
+		line-height: 20px;
+		color: #000000;
 	}
 
 	&__img {
