--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap');
 
-*, html {
+*,
+html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Merienda', cursive;
+}
+
+.line {
+    display: block;
+    margin: 0 auto;
+    border: none;
+    width: 240px;
+    border: 1px solid #000000;
 }
