--- a/src/components/poster/poster.scss
+++ b/src/components/poster/poster.scss
@@ -1,15 +1,14 @@
-.content {
-    padding: 52px 0 200px 0;
+.poster {
+    padding: 52px 0 200px;
     background: url('../../assets/desk.jpg') center center / cover no-repeat;
     max-height: 640px;
-    font-family: Merienda, cursive;
-}
-
-.info {
-    margin-top: 20px;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 35px;
-    color: #FFFFFF;
-    text-align: center;
+    
+    &__info {
+        margin-top: 20px;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 35px;
+        color: #FFFFFF;
+        text-align: center;
+    }
 }
