--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -9,6 +9,7 @@
     }
 
     &__item {
+        margin-top: 60px;
         padding: 22px 21px;
         height: 240px;
         width: 220px;
@@ -18,6 +19,7 @@
 
         &:hover {
             background: rgba(255, 255, 255, 0.9);
+            transform: translateY(-3px);
         }
     }
 
@@ -42,8 +44,31 @@
         line-height: 20px;
         text-align: right;
         color: #000000;
-
     }
 
+}
 
+.cardItem__place {
+    margin: 14px 0 4px;
+    font-family: Merienda;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: right;
+
+    color: #000000;
+}
+
+.cardItem_big {
+    padding: 37px 22px 22px 26px;
+    height: 260px;
+    filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.25));
+    background-color: #fff;
+
+    &:hover {
+
+        filter: drop-shadow(5px 5px 35px rgba(0, 0, 0, 0.25));
+
+    }
 }
