--- a/src/index.scss
+++ b/src/index.scss
@@ -15,3 +15,31 @@ html {
     width: 240px;
     border: 1px solid #000000;
 }
+
+.btn {
+    width: 120px;
+    height: 30px;
+    display: block;
+    margin: 0 auto;
+    font-family: Merienda;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
+    background-color: transparent;
+    border-radius: 3px;
+    border: none;
+    border: 2px solid white;
+    margin-top: 20px;
+    transition: .2s all;
+
+    &:hover {
+        color: #000; /* Fallback for older browsers */
+        color: rgba(0, 0, 0, 0.5);
+        background-color: #fff;
+        transform: translateY(-2px);
+    }
+    &:active {
+        transform: translateY(0);
+    }
+}
