--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -50,9 +50,7 @@
 
 .cardItem__place {
     margin: 14px 0 4px;
-    font-family: Merienda;
-    font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 14px;
     line-height: 20px;
     text-align: right;
@@ -65,10 +63,7 @@
     height: 260px;
     filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.25));
     background-color: #fff;
-
     &:hover {
-
         filter: drop-shadow(5px 5px 35px rgba(0, 0, 0, 0.25));
-
     }
 }
