--- a/src/components/cardFilter/cardFilter.scss
+++ b/src/components/cardFilter/cardFilter.scss
@@ -7,7 +7,6 @@
         border: none;
         margin-left: 19px;
         padding: 6px 36px;
-        font-family: Merienda;
         font-weight: 400;
         font-size: 14px;
         line-height: 20px;
@@ -37,18 +36,20 @@
         width: 75px;
         height: 30px;
         background: #FFFFFF;
-        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
+        box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
         border-radius: 4px 0px 0px 4px;
+        transition: all 0.2s;
         &:not(:first-child) {
             margin-left: 5px;
         }
         &_active {  
             background-color: #6f4e37;
             color: white;
+            box-shadow: 5px 5px 9px rgba(0, 0, 0, 0.25);
         }
 
         &:hover {
-            box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
+            box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
         }
     }
     &__card-wrapper {
