--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -44,8 +44,7 @@
 				transform-origin: bottom left;
 			}
 
-			a {
-				font-family: 'Merienda', cursive;
+			.navbar__link {
 				font-weight: 400;
 				font-size: 12px;
 				line-height: 17px;
